<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">U-Mote</string>
    <string name="title_section1">Track Pad</string>
    <string name="title_section2">Keyboard Input</string>
    <string name="title_section3">Custom Gestures</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Reconnect</string>
    <string name="action_settings">Settings</string>
    <string name="label_ip">IP Address</string>
    <string name="label_port">Port</string>
    <string name="label_connect">Connect</string>
    <string name="label_custom_gesture_on">Custom Gestures ON</string>
    <string name="label_custom_gesture_off">Custom Gestures OFF</string>
	 <!-- Buttons -->
    <skip />
    <!-- Label, button used to add a gesture -->
    <string name="button_add">Add gesture</string>
    <!-- Label, button used to reload all gestures -->
    <string name="button_reload">Reload</string>
    <!-- Label, button used to cancel the operation of adding a gesture -->
    <string name="button_discard">Discard</string>
    <!-- Label, button used to save a gesture newly created -->
    <string name="button_done">Done</string>
    <string name="button_type">Type</string>
    <string name="button_backspace">Backspace</string>
    <string name="button_enter">Enter</string>
    <!-- Gestures -->
    <skip />
    <!-- Label, prompt asking the user to enter the name of the gesture -->
    <string name="prompt_gesture_name">Name</string>
    <!-- Label, prompt asking the user to enter the command of the gesture -->
    <string name="prompt_gesture_command">Command</string>
    <!-- Error message, informs the user he needs to enter a name before saving a gesture -->
    <string name="error_missing_name">You must enter a name</string>
    <!-- Error message, informs the user he needs to enter a command before saving a gesture -->
    <string name="error_missing_command">You must enter a Command</string>
    <!-- success message, tells the user where the gesture was saved -->
    <string name="save_success">Gesture saved in %s</string>
    <!-- Buttons in Rename gesture dialog box -->
    <string name="rename_action">OK</string>
    <!-- Buttons in send command gesture dialog box -->
    <string name="send_action">Execute</string>
    <!-- Buttons in edit map gesture dialog box -->
    <string name="edit_action">OK</string>
    <!-- Buttons in Rename gesture dialog box -->
    <string name="cancel_action">Cancel</string>
    <!-- Message displayed when the user opens the gestures settings screen -->
    <string name="gestures_loading">Loading gestures...</string>
    <!-- Message displayed when the user has no gestures -->
    <string name="gestures_empty">No gestures</string>
    <!-- Title of the screen used to view/manage gestures -->
    <string name="gestures_activity">Gestures</string>
    <!-- Noun, menu item used to rename a gesture -->
    <string name="gestures_rename">Rename</string>
    <!-- Noun, menu item used to remove a gesture -->
    <string name="gestures_delete">Delete</string>
    <!-- Map, menu item used to edit mapping of a gesture -->
    <string name="gestures_map">Edit Command</string>
    <!-- Message displayed when a gesture is successfully deleted -->
    <string name="gestures_delete_success">Gesture deleted</string>
    <!-- Title of dialog box -->
    <string name="gestures_rename_title">Rename gesture</string>
    <!-- Label of gesture name field in edit map gesture dialog box -->
    <string name="gestures_edit_map_title">Edit Command</string>
    <!-- Label of gesture name field in detect gesture dialog box -->
    <string name="gestures_detect_title">Detected gesture for</string>
    <!-- Label of gesture name field in Rename gesture dialog box -->
    <string name="gestures_rename_label">Gesture name</string>
    <!-- Label of gesture name field in Rename gesture dialog box -->
    <string name="gestures_edit_map_label">Command</string>
    <!-- Message, displayed when the sdcard cannot be found, 1st parameter is the name of the file that stores the gestures.  CHAR LIMIT=80 -->
    <string name="gestures_error_loading">Could not load %s. Make sure you have storage available.</string>
</resources>
