<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <AutoCompleteTextView
        android:id="@+id/input_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_area"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:ems="10" >

        <requestFocus/>

    </AutoCompleteTextView>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/send_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_type" />

        <Button
            android:id="@+id/backspace_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3.0"
            android:text="@string/button_backspace" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_enter" />

    </LinearLayout>

</RelativeLayout>
